naming fix common-private rule

--- a/complex.html
+++ b/complex.html
@@ -33,7 +33,7 @@
           <p class="complex-address">Район Якиманка, улица Большая Полянка, дом 44 • 119180</p>
         </article>
         <div>
-          <button class="btn-favourite">В избранное</button>
+          <button class="favourite-btn">В избранное</button>
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
       <img src="img/gallery-img-5.jpg" alt="" class="complex-gallery-item">
     </div>
     <div class="container">
-      <button class="btn-photo-count" href="#">41 фотография</button>
+      <button class="photo-count-btn" href="#">41 фотография</button>
       <section class="complex-info">
         <div class="complex-info-block">
           <h2 class="complex-info-block-title">950<small class="complex-info-block-description">предложений</small></h2>
@@ -107,18 +107,18 @@
         <div class="col-xs-10">
           <p class="complex-description-text">
             ВТБ Арена Парк — современный квартал в 10 минутах езды от Кремля. Территория разделена на три зоны: жилой район, центральный стадион «Динамо» и большой спортивный парк.</p>
-            <p class="complex-description-text">
+          <p class="complex-description-text">
               Жилой район — это 13 корпусов: апартаменты, штаб-квартира «Динамо», отель «Hyatt Regency Moscow» и четыре современных бизнес-центра. На территории — рестораны, спа-комплекс, фитнес-центр, химчистка, аптеки, магазины и отделения банков. В каждом корпусе
               работает консьерж и круглосуточная охрана. Для жителей оборудованы технические помещения под хранение колясок и велосипедов, комнаты для домашних животных и уютные вестибюли с мягкими креслами для встреч с друзьями и соседями.</p>
-              <p class="complex-description-text">
-                Сердце ВТБ Арена Парк — стадион. Под одной крышей расположились музей, торгово-развлекательный комплекс, подземная парковка для гостей и две крупные спортивные арены. Жизнь квартала сосредоточена в этой зоне: здесь можно сходить на концерт или фестиваль,
-                поболеть за любимую команду и купить новую рубашку в торговом комплексе.</p>
-                <p class="complex-description-text">
-                  Тихий жилой район от шумного стадиона отделяет Парк Физкультуры и Отдыха. Здесь каждый найдет занятие: для детей оборудованы игровые зоны, для подростков — спортивные площадки на открытом воздухе, для взрослых — велосипедные дорожки и зоны отдыха, где
-                  можно подышать свежим воздухом во время рабочего перерыва.</p>
-                </div>
-              </div>
-            </div>
+          <p class="complex-description-text">
+              Сердце ВТБ Арена Парк — стадион. Под одной крышей расположились музей, торгово-развлекательный комплекс, подземная парковка для гостей и две крупные спортивные арены. Жизнь квартала сосредоточена в этой зоне: здесь можно сходить на концерт или фестиваль,
+              поболеть за любимую команду и купить новую рубашку в торговом комплексе.</p>
+          <p class="complex-description-text">
+              Тихий жилой район от шумного стадиона отделяет Парк Физкультуры и Отдыха. Здесь каждый найдет занятие: для детей оборудованы игровые зоны, для подростков — спортивные площадки на открытом воздухе, для взрослых — велосипедные дорожки и зоны отдыха, где
+              можно подышать свежим воздухом во время рабочего перерыва.</p>
+        </div>
+        </div>
+        </div>
           </section>
           <section class="complex-services">
             <div class="container">
@@ -219,7 +219,7 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-4">
-                <div class="footercompany">
+                <div class="footer-company">
                   <h4 class="footer-title">ООО «Ярд»</h4>
                   <p class="footer-company-text">ОГРН 1175074002531</p>
                   <p class="footer-company-text">ИНН 5036165365</p>
