--- a/complexes.html
+++ b/complexes.html
@@ -42,7 +42,7 @@
         <img src="img/bitmap.jpg" srcset="img/bitmap@2x.jpg 2x, img/bitmap@3x.jpg 3x" class="complexcard-img">
         <article class="complexcard-info">
           <p class="complexcard-place">SOUTH BEACH, SAN FRANCISCO</p>
-          <h3 class="complexcardadress">764 Metropolitan Avenue</h3>
+          <h3 class="complexcard-adress">764 Metropolitan Avenue</h3>
           <p class="complexcard-description">The Lewis Steel Building is a masterful industrial conversion located in the heart of Williamsburg. Located at 76 North 4th Street, the former 1930's steel factory has been transformed into 83 individually unique and luxury loft apartments.</p>
         </article>
       </a>
@@ -50,14 +50,14 @@
         <img src="img/bitmap.jpg" srcset="img/bitmap@2x.jpg 2x, img/bitmap@3x.jpg 3x" class="complexcard-img">
         <article class="complexcard-info">
           <p class="complexcard-place">MIDTOWN EAST, MANHATTAN</p>
-          <h3 class="complexcardadress">100 East 53rd Street</h3>
+          <h3 class="complexcard-adress">100 East 53rd Street</h3>
           <p class="complexcard-description">One Hundred East Fifty Third Street by Foster + Partners is a limited collection of modern residences in Midtown Manhattan's Cultural District. The 94 residences ranging from alcove lofts to four bedrooms within the 63-story tower are generously proportioned.</p>
         </article>
       </a><a class="complexcard" href="#">
         <img src="img/bitmap.jpg" srcset="img/bitmap@2x.jpg 2x, img/bitmap@3x.jpg 3x" class="complexcard-img">
         <article class="complexcard-info">
           <p class="complexcard-place">NOLITA, MANHATTAN</p>
-          <h3 class="complexcardadress">152 Elizabeth</h3>
+          <h3 class="complexcard-adress">152 Elizabeth</h3>
           <p class="complexcard-description">152 Elizabeth is an ultra-luxury condominium building—the first in New York City designed by Japanese master architect Tadao Ando. Located at the corner of Kenmare and Elizabeth Streets in Nolita, the 32,000-square-foot building will stand as a profound architectural statement and embrace the industrial character of the neighborhood.</p>
         </article>
       </a>
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-4">
-          <div class="footercompany">
+          <div class="footer-company">
             <h4 class="footer-title">ООО «Ярд»</h4>
             <p class="footer-company-text">ОГРН 1175074002531</p>
             <p class="footer-company-text">ИНН 5036165365</p>
